--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,23 +8,11 @@
     "default_popup": "index.html",
     "default_icon": "favicon.ico"
   },
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
+  "icons": {
+    "16": "logo192.png",
+    "48": "logo192.png",
+    "128": "logo192.png"
+  },
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
