--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,5 +16,15 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "permissions": [
+    "activeTab",
+    "tabs"
+ ],
+ "content_scripts": [
+  {
+      "matches": ["http://*/*", "https://*/*", "<all_urls>"],
+      "js": ["./content-script.js"]
+  }
+]
 }
